--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@
   margin-top: 10%;
 }
 
+.display {
+  width: 100%;
+  height: 100px;
+  font-size: 3rem;
+  padding: 10px;
+}
+
 .containerCalculator {
   display: grid;
   grid-template-columns: repeat(4, auto);
