--- a/style.css
+++ b/style.css
@@ -1,30 +1,93 @@
+html {
+  font-size: 62.5%;
+  box-sizing: border-box;
+}
+
+*, *::before, *::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
 .container {
-  display: flex;
-  justify-content: center;
-  margin-top: 10%;
+  border: 1px solid gray;
+  width: 400px;
+  border-radius: 5px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .display {
   width: 100%;
   height: 100px;
-  font-size: 3rem;
-  padding: 10px;
+  font-size: 4rem;
+  background-color: #4C4B50;
+  color: #fff;
+  text-align: right;
+  padding-right: 20px;
+  padding-left: 10px;
 }
 
 .containerCalculator {
   display: grid;
-  grid-template-columns: repeat(4, auto);
+  grid-template-columns: repeat(4, 1fr);
   row-gap: 20px;
   column-gap: 20px;
+  padding: 20px;
+}
+
+button {
+  height: 60px;
+  background-color: #fff;
+  border-radius: 10px;
+  border: 1px solid #c4c4c4;
+  background-color: transparent;
+  font-size: 2rem;
+  color: #333;
+  background-image: linear-gradient(to bottom,transparent,transparent 50%,rgba(0,0,0,.04));
+  box-shadow: inset 0 0 0 1px rgba(255,255,255,.05), inset 0 1px 0 0 rgba(255,255,255,.45), inset 0 -1px 0 0 rgba(255,255,255,.15), 0 1px 0 0 rgba(255,255,255,.15);
+  text-shadow: 0 1px rgba(255,255,255,.4);
+}
+
+button:hover {
+  background-color: #eaeaea;
+}
+
+.operate {
+  color: #48C003;
 }
 
 .equals {
+  background-color: orange;
+  color: #fff;
   grid-row-start: 2;
   grid-row-end: 6;
-  grid-column: 4;
+  grid-column-start: 4;
+  grid-column-end: 5;
+  height: 100%;
+}
+
+.equals:hover {
+  background-color: #F3D5A1;
 }
 
 .clear {
+  background-color: #E2EA35;
+  color: #fff;
   grid-row-start: 5;
   grid-column: 3;
+}
+
+.clear:hover {
+  background-color: #E3E79F;
+}
+
+footer {
+  position: absolute;
+  text-align: center;
+  bottom: 0;
+  width: 100%;
+  padding: 15px 0;
 }
